
   Bug Fixes :

	

5.2b		13 February 2006

   New features :
	
*****	Full virtual robot support ; you can now create 2 lists with the same same in different virtual robots.
*****	The database structure should be updated (automatically performed with MySQL) to add new database fields.
*****	Check the create_db.XX scripts (XX being your RDBMS) to know about the new fields
*****	The spool file names has evolved to include the hostname, but existing spools will be processed.

	Auth.conf file can be defined for each virtual robot.

	[G. Bouteille] Message topics : list messages can be tagged with topics. List owner defines a set of topics for the list.
	List members can select topics and only recieve related messages. See documentation for more info.

	Added support for an SQlite backend.A create_db.SQLite has been added. Sympa.pl is able to
	automatically create the database if none exists. SQLite is now  the default 'db_type' in sympa.conf 
	(SQlite drivers include the database engine itself, therefore nothing needs to be installed).

	Sympa is now VERP enabled ; this includes the following changes:	 
		* new bounce_address_subscriber DB field   
		* verp_rate list and global parameter

src/sympa.pl: new --sync_include sympa.pl option

	web_tt2/review.tt2, web_tt2/reviewbouncing.tt2,	wwsympa/wwsympa.fcgi: 
	[BugID 538] [A.Bernstein]: provide a dump for searched members or bouncing members

	[requested by J.Abbott] new return_path_suffix parameter in sympa.conf

	po/Makefile, po/sv.po, src/Conf.pm, src/Language.pm: [D.Nylander] sympa translated to Swedish

	src/List.pm: [requested by D.Jahnke] 'db_port' now available in include_sql_query paragraph

	src/: Language.pm, mail.pm: New PushLang() and PopLang() subroutines

	doc/: New "roles and privileges" section

	src/List.pm: clean buggy list config files at startup

	
	[A.Bernstein] subscriber's groups always listed in a box. Resized the menu box (+60px) ; 
	removed the "your subscriptions ; new your_lists.tt2 template